--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ dist-ssr/
 public/
 ,DS_Store
 _pycache__/
-.env
+__pycache__/
 venv/
 
 # testing
@@ -22,3 +22,4 @@ venv/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
